# explore_ndk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yasin/explore/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_test.cpp  native-lib.cpp
app/src/main/cpp/c/: dynamic-register.c  test.c  test2.c
app/src/main/cpp/include/: com_yasin_explore_Jni.h  print.h
app/src/main/java/com/yasin/explore/: DynamicRegister.java  Jni.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/yasin/explore/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
